# golem-llm

./: .env.example  .gitignore  Cargo.toml  EMBEDDINGS.md  Makefile.toml  README.md  run_embed_tests.sh  test.md  test_embed_openai_bounty.py  test_openai_embeddings.py
.github/workflows/: ci.yaml
embed/: Cargo.toml  Makefile.toml
embed-cohere/: Cargo.toml
embed-cohere/src/: client.rs  conversions.rs  lib.rs
embed-huggingface/: Cargo.toml
embed-huggingface/src/: client.rs  conversions.rs  lib.rs
embed-huggingface/tests/: integration_test.rs
embed-openai/: Cargo.toml
embed-openai/src/: client.rs  conversions.rs  lib.rs
embed-openai/tests/: api_test.rs  bounty_test.rs  openai_test.rs
embed-voyageai/: Cargo.toml
embed-voyageai/src/: client.rs  conversions.rs  lib.rs
embed-voyageai/tests/: integration_test.rs
embed/cohere/: Cargo.toml
embed/cohere/src/: bindings.rs  client.rs
embed/embed/src/: durability.rs
embed/hugging-face/src/: conversions.rs
embed/openai/src/: client.rs
embed/src/: config.rs  durability.rs  error.rs  event_source.rs  lib.rs
embed/voyageai/src/: conversitions.rs
golem-embed/: Makefile.toml
golem-embed/embed/: Cargo.toml
golem-embed/embed-cohere/: Cargo.toml
golem-embed/embed-cohere/src/: client.rs  conversions.rs  lib.rs
golem-embed/embed-hugging-face/: Cargo.toml
golem-embed/embed-hugging-face/src/: bindings.rs  client.rs  conversions.rs  lib.rs
golem-embed/embed-openai/: Cargo.toml
golem-embed/embed-openai/src/: bindings.rs  client.rs  conversions.rs  lib.rs  main.rs
golem-embed/embed-openai/wit/: world.wit
golem-embed/embed-voyageai/: Cargo.toml
golem-embed/embed-voyageai/src/: bindings.rs  client.rs  conversitions.rs  lib.rs
golem-embed/embed/src/: config.rs  durability.rs  error.rs  lib.rs
golem-embed/embed/wit/: embed.wit
golem-embed/wit/: golem-embed.wit
golem-llm/: Makefile.toml
llm/: Cargo.toml  Makefile.toml  README.md
llm-anthropic/: Cargo.toml
llm-anthropic/src/: bindings.rs  conversions.rs
llm-bedrock/: Cargo.toml
llm-bedrock/src/: bindings.rs  client.rs  conversions.rs  error.rs  lib.rs  stream_bridge.rs
llm-bedrock/wit/: bedrock.wit  llm.wit
llm-grok/: Cargo.toml
llm-grok/src/: bindings.rs  conversions.rs
llm-ollama/: Cargo.toml
llm-ollama/src/: bindings.rs  client.rs  conversions.rs  lib.rs
llm-openai/: Cargo.toml
llm-openai/src/: bindings.rs  conversions.rs
llm-openrouter/: Cargo.toml
llm-openrouter/src/: bindings.rs  conversions.rs
llm/bedrock/: Cargo.toml
llm/bedrock/src/: client.rs  conversions.rs  lib.rs
llm/bedrock/wit/: bedrock.wit
llm/llm/: Cargo.toml
llm/llm/src/: config.rs  lib.rs
llm/llm/src/event_source/: aws_eventstream.rs  mod.rs  stream.rs
llm/src/: chat_stream.rs  durability.rs  golem-llm.code-workspace  image.rs  lib.rs  utf8_stream.rs
llm/tests/: integration_tests.rs
search/: Makefile.toml
search/algolia/: Cargo.toml
search/elasticsearch/: Cargo.toml
search/elasticsearch/src/: client.rs  conversions.rs  lib.rs
search/elasticsearch/wit/: world.wit
search/meilisearch/: Cargo.toml
search/meilisearch/src/: client.rs  conversions.rs  lib.rs
search/meilisearch/wit/: world.wit
search/opensearch/: Cargo.toml
search/search/: Cargo.toml
search/search/src/: config.rs  durability.rs  error.rs  lib.rs
search/typesense/: Cargo.toml
test/: Cargo.toml
test/common-rust/: golem.yaml
test/components-rust/test-embed/: golem.yaml
test/components-rust/test-embed/wit/: test-embed.wit
test/components-rust/test-llm/: Cargo.toml  golem.yaml
test/components-rust/test-llm/src/: lib.rs
test/components-rust/test-llm/wit/: test-llm.wit
test/components-rust/test-search/: Cargo.toml
test/components-rust/test-search/src/: lib.rs
test/components-rust/test-search/wit/: test-search.wit
test/components-rust/test-websearch/: Cargo.toml  golem.yaml
test/components-rust/test-websearch/src/: lib.rs
test/components-rust/test-websearch/wit/: test-websearch.wit
test/src/: lib.rs
test/video/components-rust/test-video/: Cargo.toml  golem.yaml
test/video/components-rust/test-video/src/: lib.rs
test/video/components-rust/test-video/wit/: test-video.wit
tests/: bedrock-test.rs
tests/bedrock-test/: Cargo.toml  bedrock-test.json
vector/: Cargo.toml  Makefile.toml
vector-qdrant/: Cargo.toml
vector-qdrant/src/: lib.rs
vector-qdrant/wit/: qdrant.wit
vector/src/: lib.rs
vector/vector/: Cargo.toml
vector/vector-qdrant/: Cargo.toml
vector/vector-qdrant/src/: bindings.rs
vector/vector-qdrant/wit/: qdrant.wit
vector/vector/src/: config.rs  durability.rs  error.rs  lib.rs
vector/vector/wit/: vector.wit
vector/wit/: golem-vector.wit  vector.wit
video/: Makefile.toml
video/kling/: Cargo.toml
video/runway/: Cargo.toml
video/runway/src/: bindings.rs  client.rs  conversion.rs  lib.rs
video/runway/wit/: runway.wit
video/stability/: Cargo.toml
video/veo/: Cargo.toml
video/veo/src/: authentication.rs  bindings.rs  client.rs  conversion.rs  lib.rs
video/veo/wit/: veo.wit
video/video/: Cargo.toml
web-search/: Cargo.toml
web-search-google/: Cargo.toml
web-search-google/src/: bindings.rs  client.rs  lib.rs
web-search-google/wit/: google.wit
web-search/src/: durability.rs  lib.rs
websearch-bing/: Cargo.toml
websearch-bing/src/: bindings.rs  client.rs  conversions.rs  lib.rs
websearch-bing/wit/: bing.wit
websearch-brave/: Cargo.toml
websearch-brave/src/: bindings.rs  client.rs  conversions.rs  lib.rs
websearch-brave/wit/: brave.wit  deps.toml
websearch-google/: Cargo.toml  README.md
websearch-google/src/: bindings.rs  client.rs  conversions.rs  lib.rs
websearch-google/wit/: deps.toml  google.wit
websearch-serper/: Cargo.toml
websearch-serper/src/: bindings.rs  client.rs  conversions.rs  lib.rs
websearch-serper/wit/: serper.wit
websearch-tavily/: Cargo.toml
websearch-tavily/src/: bindings.rs  conversions.rs
websearch-tavily/wit/: tavily.wit
wit/: golem-embed.wit  golem-llm.wit  golem-web-search.wit
wit/golem-vector/: vector.wit
(+45 files in other folders)
