[workspace]
members = [
    "llm",
    "llm-anthropic",
    "llm-grok",
    "llm-openai",
    "llm-openrouter",
    "llm-bedrock",
    "test",
    "tests/bedrock-test"
]
resolver = "2"

[profile.release]
opt-level = 3

[workspace.dependencies]
golem-rust = "1.5.3"
log = "0.4.27"
reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-april-2025", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
tokio = { version = "1.36.0", features = ["full"] }
golem-llm = { path = "llm" }
llm-bedrock = { path = "llm-bedrock" }
