[workspace]
resolver = "2"

members = [
    "golem-llm/llm", 
    "golem-llm/llm-anthropic", 
    "golem-llm/llm-grok", 
    "golem-llm/llm-openai", 
    "golem-llm/llm-openrouter",
    # "golem-embed/embed",
    # "golem-embed/embed-openai",
    # "golem-embed/embed-cohere",
    # "golem-embed/embed-huggingface",
    # "golem-embed/embed-voyageai"
]

[profile.release]
debug = false
lto = true
opt-level = 's'

[workspace.dependencies]
golem-rust = "1.5.5"
log = "0.4.27"
reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-april-2025", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
base64 = { version = "0.22.1" }
