[package]
name = "golem-llm-bedrock"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with AWS Bedrock APIs, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-llm/durability"]

[dependencies]
golem-llm = { path = "../llm", version = "0.0.0", default-features = false }
golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }

# AWS SDK with WASI support - minimal configuration
aws-config = { version = "1.5.19", default-features = false, features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.56.0", default-features = false }
aws-smithy-wasm = { version = "0.1.4", default-features = false }
aws-types = { version = "1.3.4", default-features = false }
# Minimal tokio for WASI (only WASM-compatible features)
tokio = { version = "1.40", default-features = false, features = ["macros", "rt", "time", "io-util"] }
# HTTP client for image fetching (Bedrock requires image bytes, not URLs)
reqwest = { workspace = true }
# Base64 decoding for data URL images
base64 = "0.22"



[package.metadata.component]
package = "golem:llm-bedrock"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:llm/llm@1.0.0" = "golem_llm::golem::llm::llm"
"wasi:io/poll@0.2.0" = "golem_rust::wasm_rpc::wasi::io::poll"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:llm" = { path = "wit/deps/golem-llm" }
"wasi:io" = { path = "wit/deps/wasi:io"} 