[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
golem-llm = { path = "../llm" }
llm-bedrock = { path = "../llm-bedrock" }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
