[package]
name = "golem-vector-qdrant"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "Vector database component for Qdrant (experimental)"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
golem-vector = { path = "../vector" }

[package.metadata.component]
package = "golem:vector-qdrant"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:vector/vector-library@1.0.0" = "golem_vector::golem::vector::vector_library"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:vector" = { path = "wit/deps/golem-vector" }
