[package]
name = "web-search-brave"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { workspace = true }
golem-rust = { git = "https://github.com/golemcloud/golem-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
anyhow = "1.0"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }

[lib]
crate-type = ["cdylib"]

[features]
default = []
durability = ["golem-rust/durability"] 