[package]
name = "web-search-serper"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { workspace = true }
golem-rust = { git = "https://github.com/golemcloud/golem-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
anyhow = "1.0"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }

[lib]
crate-type = ["cdylib"]

[features]
default = []
durability = ["golem-rust/durability"]

[package.metadata.component]
package = "golem:web-search-serper"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:web-search/web-search@1.0.0" = "golem_web_search::golem::web_search::web_search"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:web-search" = { path = "wit/deps/golem-web-search" } 