[package]
name = "golem-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
golem-rust = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }
thiserror = "1.0"
anyhow = "1.0"

[lib]
path = "src/lib.rs" 