[package]
name = "vector-qdrant"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with Qdrant vector databases with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["durability"]
durability = ["golem-rust/durability"]



[dependencies]
golem-vector = {path = "../vector", version = "0.0.0", default-features=false}
golem-rust = {workspace=true}
log = { workspace = true }
reqwest =  { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }


[package.metadata.component]
package = "golem:vector-qdrant"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:vector" = {path="wit/deps/golem-vector"}
"wasi:io" = {path = "wit/deps/wasi:io"}

[package.metadata.component.bindings]
generate_unused_types = true

